WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230373
[Mac Catalyst] Fix build issue
https://bugs.webkit.org/show_bug.cgi?id=230373
Summary
[Mac Catalyst] Fix build issue
Per Arne Vollan
Reported
2021-09-16 14:24:00 PDT
There's an issue with the Mac Catalyst build where LSSessionID is being redefined. Address this by removing the second definition, and moving the related function into the open source section.
Attachments
Patch
(1.79 KB, patch)
2021-09-16 14:29 PDT
,
Per Arne Vollan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.84 KB, patch)
2021-09-16 15:29 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2021-09-16 14:24:17 PDT
<
rdar://83126967
>
Per Arne Vollan
Comment 2
2021-09-16 14:29:25 PDT
Created
attachment 438402
[details]
Patch
Per Arne Vollan
Comment 3
2021-09-16 15:29:58 PDT
Created
attachment 438406
[details]
Patch
Per Arne Vollan
Comment 4
2021-09-17 10:08:12 PDT
Thanks for reviewing!
EWS
Comment 5
2021-09-17 10:13:41 PDT
Committed
r282665
(
241806@main
): <
https://commits.webkit.org/241806@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438406
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug