[Mac Catalyst] Fix build issue https://bugs.webkit.org/show_bug.cgi?id=230373

Reviewed by Darin Adler.

There's an issue with the Mac Catalyst build where LSSessionID is being redefined. Address this by removing the second definition,
and moving the related function into the open source section.

* pal/spi/cocoa/LaunchServicesSPI.h:


Canonical link: https://commits.webkit.org/241806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282665 268f45cc-cd09-0410-ab3c-d52691b4dbfc