Source/WebCore/PAL/pal/spi/cocoa/LaunchServicesSPI.h
@@ -79,6 +79,13 @@ enum LSSessionID {
 enum {
     kLSServerConnectionStatusDoNotConnectToServerMask = 0x1ULL,
 };
+
+WTF_EXTERN_C_BEGIN
+
+CFDictionaryRef _LSApplicationCheckIn(LSSessionID, CFDictionaryRef applicationInfo);
+
+WTF_EXTERN_C_END
+
 #endif
 
 #if HAVE(LSDATABASECONTEXT)
@@ -125,17 +132,10 @@ WTF_EXTERN_C_END
 
 #if PLATFORM(MAC) || PLATFORM(MACCATALYST)
 
-#if PLATFORM(MACCATALYST) && USE(APPLE_INTERNAL_SDK)
-enum LSSessionID {
-    kLSDefaultSessionID = -2,
-};
-#endif
-
 WTF_EXTERN_C_BEGIN
 
 typedef bool (^LSServerConnectionAllowedBlock) (CFDictionaryRef optionsRef);
 void _LSSetApplicationLaunchServicesServerConnectionStatus(uint64_t flags, LSServerConnectionAllowedBlock block);
-CFDictionaryRef _LSApplicationCheckIn(LSSessionID sessionID, CFDictionaryRef applicationInfo);
 
 WTF_EXTERN_C_END
 
